--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "docx-preview": "^0.3.3",
     "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
+    "keen-slider": "^6.8.6",
     "moment": "^2.30.1",
     "next": "^15.1.3",
     "react": "^19.0.0",
